--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <logback.version>1.2.3</logback.version>
         <spring.version>5.2.5.RELEASE</spring.version>
         <annotation-api.version>1.3.2</annotation-api.version>
+        <lombok.version>1.18.12</lombok.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
@@ -42,6 +43,12 @@
                 <groupId>javax.annotation</groupId>
                 <artifactId>javax.annotation-api</artifactId>
                 <version>${annotation-api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
